force-app/main/default/objects/Demande_Cotation_c_Home__dlm/Demande_Cotation_c_Home__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Demande_Cotation__c_Home</labelOverride>
        <masterLabel>Demande_Cotation__c_Home</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>