force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/AA_OwnerName_c__c.field-meta.xml
<CustomField>
    <fullName>AA_OwnerName_c__c</fullName>
    <label>AA OwnerName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AA OwnerName</labelOverride>
        <masterLabel>AA OwnerName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>