force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Account_c__c.field-meta.xml
<CustomField>
    <fullName>Account_c__c</fullName>
    <label>Compte</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Compte</labelOverride>
        <masterLabel>Compte</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>