force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Account_origin_c__c.field-meta.xml
<CustomField>
    <fullName>Account_origin_c__c</fullName>
    <label>Origine du compte</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Origine du compte</labelOverride>
        <masterLabel>Origine du compte</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>