force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Canal_vente_c__c.field-meta.xml
<CustomField>
    <fullName>Canal_vente_c__c</fullName>
    <label>Canal de vente</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Canal de vente</labelOverride>
        <masterLabel>Canal de vente</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>