force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/CAR_Elec_c__c.field-meta.xml
<CustomField>
    <fullName>CAR_Elec_c__c</fullName>
    <label>CAR Elec</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CAR Elec</labelOverride>
        <masterLabel>CAR Elec</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>