force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Charge_affaire_c__c.field-meta.xml
<CustomField>
    <fullName>Charge_affaire_c__c</fullName>
    <label>Chargé d&apos;affaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Chargé d&apos;affaire</labelOverride>
        <masterLabel>Chargé d&apos;affaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>