force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Concurrence_identifiee_c__c.field-meta.xml
<CustomField>
    <fullName>Concurrence_identifiee_c__c</fullName>
    <label>Concurrence identifiée</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Concurrence identifiée</labelOverride>
        <masterLabel>Concurrence identifiée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>