force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Conformite_E_Attestation_c__c.field-meta.xml
<CustomField>
    <fullName>Conformite_E_Attestation_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conformité E-Attestation</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Conformité E-Attestation</labelOverride>
        <masterLabel>Conformité E-Attestation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>