force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Date_demande_cotation_c__c.field-meta.xml
<CustomField>
    <fullName>Date_demande_cotation_c__c</fullName>
    <label>Date de demande de cotation</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de demande de cotation</labelOverride>
        <masterLabel>Date de demande de cotation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>