force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Date_RDV_Client_c__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_Client_c__c</fullName>
    <label>Date RDV Client</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date RDV Client</labelOverride>
        <masterLabel>Date RDV Client</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>