force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Duree_offre_c__c.field-meta.xml
<CustomField>
    <fullName>Duree_offre_c__c</fullName>
    <label>Durée de l&apos;offre souhaitée</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Durée de l&apos;offre souhaitée</labelOverride>
        <masterLabel>Durée de l&apos;offre souhaitée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>