force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Formula_plus_10_compteurs_c__c.field-meta.xml
<CustomField>
    <fullName>Formula_plus_10_compteurs_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus de 10 compteurs</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Plus de 10 compteurs</labelOverride>
        <masterLabel>Plus de 10 compteurs</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>