force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Fournisseur_signe_c__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur_signe_c__c</fullName>
    <label>Fournisseur défendu</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fournisseur défendu</labelOverride>
        <masterLabel>Fournisseur défendu</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>