force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Infos_complementaires_c__c.field-meta.xml
<CustomField>
    <fullName>Infos_complementaires_c__c</fullName>
    <label>Infos complémentaires</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Infos complémentaires</labelOverride>
        <masterLabel>Infos complémentaires</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>