force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Infos_reactualisation_c__c.field-meta.xml
<CustomField>
    <fullName>Infos_reactualisation_c__c</fullName>
    <label>Infos réactualisation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Infos réactualisation</labelOverride>
        <masterLabel>Infos réactualisation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>