force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/KQ_Account_c__c.field-meta.xml
<CustomField>
    <fullName>KQ_Account_c__c</fullName>
    <label>Key Qualifier Compte</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Compte</labelOverride>
        <masterLabel>Key Qualifier Compte</masterLabel>
        <refAttrDeveloperName>KQ_Account_c</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>