force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Marge_c__c.field-meta.xml
<CustomField>
    <fullName>Marge_c__c</fullName>
    <label>Rémunération</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Rémunération</labelOverride>
        <masterLabel>Rémunération</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>