force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Marge_souhaitee_c__c.field-meta.xml
<CustomField>
    <fullName>Marge_souhaitee_c__c</fullName>
    <label>Marge souhaitée</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Marge souhaitée</labelOverride>
        <masterLabel>Marge souhaitée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>