force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Motif_de_refus_c__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_refus_c__c</fullName>
    <label>TO DELETE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TO DELETE</labelOverride>
        <masterLabel>TO DELETE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>