force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Motif_mise_en_attente_c__c.field-meta.xml
<CustomField>
    <fullName>Motif_mise_en_attente_c__c</fullName>
    <label>Motif de mise en attente</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Motif de mise en attente</labelOverride>
        <masterLabel>Motif de mise en attente</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>