force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Motif_refus_c__c.field-meta.xml
<CustomField>
    <fullName>Motif_refus_c__c</fullName>
    <label>Motif de refus</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Motif de refus</labelOverride>
        <masterLabel>Motif de refus</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>