force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Nombre_PDE_c__c.field-meta.xml
<CustomField>
    <fullName>Nombre_PDE_c__c</fullName>
    <label>Nombre de PDE</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nombre de PDE</labelOverride>
        <masterLabel>Nombre de PDE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>