force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Offre_Renouvellement_c__c.field-meta.xml
<CustomField>
    <fullName>Offre_Renouvellement_c__c</fullName>
    <label>Offre de renouvellement</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Offre de renouvellement</labelOverride>
        <masterLabel>Offre de renouvellement</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>