force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Plus_1_Giga_c__c.field-meta.xml
<CustomField>
    <fullName>Plus_1_Giga_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus 1 Giga</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Plus 1 Giga</labelOverride>
        <masterLabel>Plus 1 Giga</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>