force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/rel_1772166842851_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1772166842851_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande_Cotation_c_Home_Account_c_ma_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Demande_Cotation_c_Home_Account_c_ma_rel</relationshipLabel>
    <relationshipName>rel_1772166842851_end</relationshipName>
    <type>Lookup</type>
</CustomField>