force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Societe_du_commercial_c__c.field-meta.xml
<CustomField>
    <fullName>Societe_du_commercial_c__c</fullName>
    <label>Société du commercial</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Société du commercial</labelOverride>
        <masterLabel>Société du commercial</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>