force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Souhaite_offre_TURPE_c__c.field-meta.xml
<CustomField>
    <fullName>Souhaite_offre_TURPE_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Souhaite offre TURPE</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Souhaite offre TURPE</labelOverride>
        <masterLabel>Souhaite offre TURPE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>