force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Specificite_offre_c__c.field-meta.xml
<CustomField>
    <fullName>Specificite_offre_c__c</fullName>
    <label>Spécificité de l&apos;offre</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Spécificité de l&apos;offre</labelOverride>
        <masterLabel>Spécificité de l&apos;offre</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>