force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/Statut_c__c.field-meta.xml
<CustomField>
    <fullName>Statut_c__c</fullName>
    <label>Statut</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Statut</labelOverride>
        <masterLabel>Statut</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>