force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_AA_Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_Account_Name_c__c</fullName>
    <label>TECH AA Account Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH AA Account Name</labelOverride>
        <masterLabel>TECH AA Account Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>