force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_Date_RDV_Reactu_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_RDV_Reactu_c__c</fullName>
    <label>Date de RDV ou de réactualisation</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de RDV ou de réactualisation</labelOverride>
        <masterLabel>Date de RDV ou de réactualisation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>