force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_Owner_Manger_Mail_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_Manger_Mail_c__c</fullName>
    <label>Manager Mail</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Manager Mail</labelOverride>
        <masterLabel>Manager Mail</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Email</type>
</CustomField>