force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_OwnerName_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerName_c__c</fullName>
    <label>TECH_OwnerName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_OwnerName</labelOverride>
        <masterLabel>TECH_OwnerName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>