force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_OwnerRegion_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerRegion_c__c</fullName>
    <label>TECH_OwnerRegion</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_OwnerRegion</labelOverride>
        <masterLabel>TECH_OwnerRegion</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>