force-app/main/default/objects/Demande_Cotation_c_Home__dlm/fields/TECH_Partner_OwnerName_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Partner_OwnerName_c__c</fullName>
    <label>Directeur partenaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Directeur partenaire</labelOverride>
        <masterLabel>Directeur partenaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>